stretching fixed

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -4,7 +4,6 @@
 	font-family: 'Roboto', sans-serif;
 	color: white;
 	line-height: 1.5em;
-	transform: scale(0.97);
 }
 
 header {
@@ -16,28 +15,29 @@ header {
 
 h1 {
 	font-weight: 700;
-	font-size: 29px;
+	font-size: 26px;
 	font-style: italic;
+	margin-left: 50px;
 }
 
 h2 {
 	text-align: center;
-	font-size: 27px;
+	font-size: 23px;
 	text-decoration: underline;
 }
 
 body {
-	margin: 0 auto;
+
 	background-image: url('background.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 }
 
 section {
-	margin: 2em 2em 0em 2em;
+	margin: 2em 8em 0em 8em;
 	background-color: rgba(000, 000, 000, 0.5);
 	padding: 1em 2.5em 1em 2.5em;
-	font-size: 18px;
+	font-size: 16px;
 	border-radius: 15px;
 }
 
@@ -45,7 +45,7 @@ footer {
 	text-align: center;
 	margin-top: 1.35em;
 	margin-bottom: 1.35em;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: 500;
 }
 
@@ -65,7 +65,7 @@ nav a {
 	margin-left: 1em;
 	margin-right: 1em;
 	font-weight: 600;
-	font-size: 23px;
+	font-size: 24px;
 }
 
 
@@ -85,7 +85,7 @@ a:hover {
 }
 
 #certificates a {
-	font-size: 20px;
+	font-size: 18px;
 }
 
 #experience {
@@ -95,11 +95,12 @@ a:hover {
 
 #language_table {
 	float: right;
+	margin-right: 50px;
 }
 
 #language_table img {
     height:auto;
-    width:28px;
+    width:23px;
 }
 
 #language_table a {
@@ -118,11 +119,11 @@ a:hover {
 }
 
 #course_tables a{
-	font-size: 20px;
+	font-size: 18px;
 }
 
 #source_table a{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #course_tables table {
@@ -137,5 +138,5 @@ a:hover {
 #contact_block a {
 	margin-left: 5px;
 	margin-right: 5px;
-	font-size: 20px;
+	font-size: 18px;
 }
